tests/invalid_scir_h/invalid_unused_effect.scirh
module invalid.unused_effect
fn bad x int -> int !await
  return x
